--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -12,7 +12,7 @@ and then observe emerging from those definitions the presence of
 \item curvature
 \item the index of a vector field,
 \end{itemize}
-and \added[id=Greg]{attempt to} prove
+and attempt to prove
 \begin{itemize}
 \item the Gauss-Bonnet theorem
 \item and the Poincaré-Hopf theorem.
