moved figures to subdirectory; made some changes from last friday's review; added todo for the others

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -48,8 +48,11 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \end{dedication}
 
 \listofchanges[title=Changelist]
-%\listoftodos
+\listoftodos
+\clearpage
 
+
+\tableofcontents 
 \clearpage
 \input{discrete_gauge_theory_intro}
 \clearpage
@@ -62,6 +65,9 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \input{discrete_gauge_theory_vector_fields}
 \clearpage
 \input{discrete_gauge_theory_totals}
+\clearpage
+\appendix
+\input{discrete_gauge_theory_appendix}
 \clearpage
 
 \bibliography{connections}
