tweaks to html conversion; cleared some todos

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -214,7 +214,7 @@ fields. (abridged)},
   file = {Full Text PDF:/Users/glangmead/Zotero/storage/KSVECYLJ/Khavkine and Schreiber - 2017 - Synthetic geometry of differential equations I. J.pdf:application/pdf;Snapshot:/Users/glangmead/Zotero/storage/P6E62JSG/1701.html:text/html}
 }
 
-@article{schreiber_differential_2013,
+@article{dcct,
   title = {Differential cohomology in a cohesive infinity-topos},
   url = {https://arxiv.org/abs/1310.7930v1},
   abstract = {We formulate differential cohomology and Chern-Weil theory -- the theory of
