--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -116,7 +116,7 @@ Finally we observe that for the triangle \( F \), an odd permutation that keeps 
 In a bundle of mere circles \( T:\mm\to\EMzo \) the total holonomy is independent of the choice of paths \( p_{F_i} \) and the basepoint \( m \). It is inverted if we switch orientations.
 \end{mycor}
 \begin{proof}
-\todo{cite sth.}
+This follows from the commutativity of \( \so \) and hence of the holonomy isomorphism groups \( Tm=Tm \). See \cite{buchholtz2023central}, Example 3.8.
 \end{proof}
 
 \begin{myex}
