--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
@@ -36,16 +36,32 @@ and such that for each pushout defining \( \mm_k \) we have the diagram
   \arrow["\ulcorner"{anchor=center, pos=0.125, rotate=180}, draw=none, from=2-2, to=1-1]
   \arrow["{f_k}", from=2-2, to=3-2]
   \arrow[shorten >=2pt, Rightarrow, from=2-2, to=0]
-\end{tikzcd}\todo{Lemma: k-conn exists iff for all k there exists a flatness structure on face mk}
-\todo{draw diagram with single face \{mk\}}
-\todo{name the filler map of the outer square}
+\end{tikzcd}
+\end{center}
+the outer square of which restricts on each face to the diagram
+\begin{center}
+% https://q.uiver.app/#q=WzAsNCxbMCwxLCJcXG1hdGhiYntNfV97ay0xfSJdLFswLDAsIlxce21fa1xcfVxcdGltZXMgU15rIl0sWzEsMCwibV9rIl0sWzEsMSwiXFxtYXRoY2Fse1V9Il0sWzAsM10sWzEsMCwiXFxwYXJ0aWFsX3trLTF9IiwyXSxbMiwzLCJmX2tcXGNpcmMqX2siXSxbMSwyLCIhIl0sWzAsMiwiXFxmbGF0X2siLDAseyJzaG9ydGVuIjp7InNvdXJjZSI6NDAsInRhcmdldCI6NDB9LCJsZXZlbCI6Mn1dXQ==
+\begin{tikzcd}
+  {\{m_k\}\times S^k} & {m_k} \\
+  {\mathbb{M}_{k-1}} & {\mathcal{U}}
+  \arrow["{!}", from=1-1, to=1-2]
+  \arrow["{\partial_{k-1}}"', from=1-1, to=2-1]
+  \arrow["{f_k\circ*_k}", from=1-2, to=2-2]
+  \arrow["{\flat_k}", shorten <=10pt, shorten >=10pt, Rightarrow, from=2-1, to=1-2]
+  \arrow[from=2-1, to=2-2]
+\end{tikzcd}
 \end{center}
 then we say
 \begin{itemize}
 \item The map \( f_k \) is a \defemph{\( k \)-bundle} on \( \mm_k \).
-\item Given \( f_{k-1} \), the pair given by the map \( f_k \) and the proof \( f_k\circ \imath_{k-1}=f_{k-1} \) that \( f_k \) extends \( f_{k-1} \) is called a \defemph{\( k \)-connection on the bundle \( f_{k-1} \)}.
-\item For each \( k \)-face \( m_k:M_k \) the proof of commutativity of the outer square of the second diagram is called a \defemph{flatness structure for the face \( m_k \)}.
+\item The pair given by the map \( f_k \) and the proof \( f_k\circ \imath_{k-1}=f_{k-1} \) that \( f_k \) extends \( f_{k-1} \) is called a \defemph{\( k \)-connection on the bundle \( f_{k-1} \)}.
+\item The filler \( \flat_k \) is called a \defemph{flatness structure for the face \( m_k \)}.
 \end{itemize}
+
+The definitions can be digested to give
+\begin{mylemma}
+Given \( f_{k-1} \) as above, a \( k \)-connection exists if and only if there exists a flatness structure for each \( k \)-face.
+\end{mylemma}
 
 \begin{mynote}
 Another classical object we can identify here is a \emph{gauge transformation}, which is a bundle automorphism \( H:f\sim f\defeq \pit{m:\mm}f(m)=f(m) \). If we have \( ||H=\id_f||_{-1} \) then the gauge transformation is called \emph{small}, else \emph{large}.
