draft for the week

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -9,7 +9,7 @@ A \defemph{total enumeration of faces} for a combinatorial 2-manifold \( \mm \) 
 \item An ordering of the faces \( [F_1,\ldots,F_n] \).
 \item For each face \( F \) a path \( p_F:m=_\mm F_v \) and a loop \( \ell_F\defeq p_F\cdot e_{12}\cdot e_{23}\cdot e_{31}\cdot p_F^{-1} \) where \( e_{ij}:v_i=v_j \) are the paths corresponding to the edges. 
 \end{enumerate}
-Two enumerations that differ only in the ordering of vertices (2.) are said to have the \defemph{same orientation} if it is true for every face that the two orderings of vertices differ by an even orientation.
+Two\chcomment[id=Greg]{orientation} enumerations that differ only in the ordering of vertices (2.) are said to have the \defemph{same orientation} if it is true for every face that the two orderings of vertices differ by an even orientation.
 \end{mydef}
 
 Note that the last bullet of the definition is the only one that uses the realization \( \mm \).
@@ -116,11 +116,11 @@ Finally we observe that for the triangle \( F \), an odd permutation that keeps 
 In a bundle of mere circles \( T:\mm\to\EMzo \) the total holonomy is independent of the choice of paths \( p_{F_i} \) and the basepoint \( m \). It is inverted if we switch orientations.
 \end{mycor}
 \begin{proof}
-This follows from the commutativity of \( \so \) and hence of the holonomy isomorphism groups \( Tm=Tm \). See \cite{buchholtz2023central}, Example 3.8.
+This \chcomment[id=Greg]{cited 'central h-spaces'}follows from the commutativity of \( \so \) and hence of the holonomy isomorphism groups \( Tm=Tm \). See \cite{buchholtz2023central}, Example 3.8.
 \end{proof}
 
 \begin{myex}
-The total holonomy of \( T_1 \) on \( \oo \) (Definition~\ref{def:octahedron_holonomy}) is \( \id \), and the flatness structure is the path \( \id=R^8 \) which is two full rotations of \( C_4 \).
+The total holonomy of \( T_1 \) on \( \oo \) (Definition~\ref{def:octahedron_holonomy}) is \( \id \), and the flatness structure is the path \( \id=R^8 \) \chcomment[id=Greg]{total hol=id}which is two full rotations of \( C_4 \).
 \end{myex}
 
 \subsection{Total index of a vector field}
