--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
@@ -1,4 +1,5 @@
 \section{Appendix}
+\chcomment[id=Greg]{Moved this discussion}
 \subsection{Adding and removing points from polygons}
 \label{sec:polygons}
 
